[package]
name = "mqttwrk"
description = "Wrk inspired tool for scale and performance testing mqtt brokers"
version = "0.1.0"
license = "Apache-2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"


[dependencies]
# rumqttc = {git="https://github.com/bytebeamio/rumqtt.git", branch="master"}
rumqttc = { path = "../rumqtt/rumqttc" }
tokio = { version = "1", features = ["full"] }
rand = "0.7"
futures = "0.3"
log = "0.4"
thiserror = "1"
pretty_env_logger = "0.4"
jemallocator = "0.3.2"
hdrhistogram = "7.1.0"
whoami = "0.9.0"
async-channel = "1"
flume = "0.9"
structopt = "0.3.20"
rustyline = "6.3"
rustyline-derive = "0.3"
pprof = { version = "0.4", features = ["flamegraph", "protobuf"] }
colour = "0.6.0"
colored = "2.0.0"