[package]
name = "mqttwrk"
description = "Wrk inspired tool for scale and performance testing mqtt brokers"
version = "0.1.0"
license = "Apache-2.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

[features]
default = []
qos2 = []

[dependencies]
# rumqttc = {git="https://github.com/bytebeamio/rumqtt.git", branch="master"}
# rumqttc = { path = "../rumqtt/rumqttc" }
bytes = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rumqttc = "0.18.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rand = "0.8"
futures = "0.3"
log = "0.4"
thiserror = "1"
pretty_env_logger = "0.4"
hdrhistogram = "7.3.0"
whoami = "1"
flume = "0.10"
structopt = "0.3.20"
rustyline = "6.3"
rustyline-derive = "0.3"
colour = "0.6.0"
colored = "2.0.0"
