[package]
name = "mqttwrk"
description = "Wrk inspired tool for scale and performance testing mqtt brokers"
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/bytebeamio/mqttwrk"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
keywords = ["mqtt", "iot", "wrk", "cli"]
categories = ["network-programming"]

[dependencies]
# rumqttc = {git="https://github.com/bytebeamio/rumqtt.git", branch="master"}
# rumqttc = { path = "../rumqtt/rumqttc" }
bytes = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rumqttc = "0.20.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }
rand = "0.8"
futures = "0.3"
log = "0.4"
thiserror = "1"
pretty_env_logger = "0.4"
hdrhistogram = "7.3.0"
whoami = "1"
flume = "0.10"
structopt = "0.3.20"
colour = "0.6.0"
colored = "2.0.0"
fake = { version = "2.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }
indicatif = "0.17.3"
once_cell = "1.17.0"
nanoid = "0.4.0"
futures-util = "0.3.27"
